# flipt-grpc-python

./: .envrc  .gitignore  .python-version  Makefile  README.md  pyproject.toml
lib/: flipt_pb2.py  flipt_pb2_grpc.py
